css/style3.css
/** contact us section **/
h1 {
  color: #000;
  font-family: "Montserrat", sans-serif;
  font-size: 30px;
  font-style: normal;
  font-weight: 200;
  line-height: normal;
  letter-spacing: 6.8px;
}

.contact-us {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 32px;
}
@media (max-width: 768px) {
  .contact-us {
    padding: 32px; /* Revert to block layout */
  }
}
.main-cont {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
  margin-left: 10%;
  margin-right: 10%;
}
@media (max-width: 768px) {
  .main-cont {
    display: block; /* Revert to block layout */
    margin-left: 6px;
    margin-right: 6px;
  }
}
.inputdiv {
  display: flex;
  justify-content: space-between;
  gap: 32px;
}
.post {
  display: flex;
  flex-direction: column;
  gap: 32px;
  border: 2px solid;
  border-radius: 12px;
  padding: 16px;
  position: relative;
  background-color: #e2e1e1;
}
.button {
  position: absolute;
  bottom: -10px;
  right: 20px;
  width: 200px;
  border: 2px solid;
  color: #00000099;
  padding: 10px;
  border-radius: 20px;
  background-color: #e2e1e1;
}
.labelinput {
  display: flex;
  flex-direction: column;
  gap: 16px;
  width: 100%;
}

.labelinput textarea {
  gap: 36px;
  
}
.input {
  border: none;
  border-bottom: 1px solid;
  padding: 2px;
  background: none;
  outline: none;
}
.label {
  font-size: 14px;
  font-weight: 300;
  
}
.textarea {
  padding: 50px 16px;
  border: none;
  border-bottom: 1px solid;
  outline: none;
  background: none;
  margin-bottom: 84px;
}
.form {
  width: 100%;
  height: 100%;
  padding: 16px;
}
.get-in-touch {
  display: flex;
  flex-direction: column;
  text-align: left;
  width: 100%;
  height: 100%;
  padding: 16px;
}
@media (max-width: 768px) {
  .get-in-touch {
    text-align: center; /* Revert to block layout */
  }
}
.get-in-touch-div {
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.gettext {
  font-weight: 400;
  font-size: 20px;
}
.gettext2 {
  font-weight: 200;
  font-size: 11px;
  line-height: 2.3;
  letter-spacing: 3.8px;
}
.gettext3 {
  display: flex;
  flex-direction: column;
  gap: 0;
  margin-bottom: 25px;
  font-size: 12px;
  line-height: 2.5;
  letter-spacing: 3.8px;
}
.contacttext {
  font-weight: 400;
  font-size: 28x;
}
.map-section {
  max-height: 94px;
}
.outer-container {
  max-height: 94px;
  max-width: 95%;
}

